--- a/collections/_communities/events/covid-19-volunteering-opportunities/index.html
+++ b/collections/_communities/events/covid-19-volunteering-opportunities/index.html
@@ -1,6 +1,7 @@
 ---
 title: Responding to COVID-19 with Tech
 layout: layout-page-sidenav
+redirect_from: /communities/covid-19-volunteering-opportunities
 ---
 
 <p>
